--- a/nginx/nginx-proxy.conf
+++ b/nginx/nginx-proxy.conf
@@ -17,7 +17,11 @@ server {
         proxy_pass http://api$request_uri;
     }
 
-        location /database_check/ {
+    location /database_check/ {
+        proxy_pass http://api;
+    }
+
+    location /view_users/ {
         proxy_pass http://api;
     }
 
