Updated python configs - WIP

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,5 @@ matrix:
   include:
     - name: "Unit Tests"
       python: "3.6"
-      env: TEST_SUITE=suite_3_6_unit
-script: docker-compose run \
-  --rm backend ./manage.py test backend/tests/
+      env: TEST_SUITE=suite_3_5_unit
+script: ./manage.py test backend/tests/
