--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ services:
 
 before_install:
   - docker-compose build
-  - docker-compose run \ --rm backend ./manage.py test backend/tests/
+  - docker-compose run
+  - backend ./manage.py test backend/tests/
