Updated python configs - WIP

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,5 @@ services:
 before_install:
   - docker-compose build
   - docker-compose run --rm backend ./manage.py test backend/tests/
-
-install:
-  - pip install -r backend/requirements.txt
+# install:
+#   - pip install -r backend/requirements.txt
