--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ services:
 
 before_install:
   - docker-compose build
-  - docker-compose run --rm backend_travis ./manage.py test backend/tests/
+  - docker-compose run --rm backend ./manage.py test backend/tests/
   - pip install -r backend/requirements.txt
