Updated python configs - WIP

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ services:
   - docker
 
 before_install:
-  - docker-compose build backend
+  - docker-compose build
   - docker-compose run --rm backend ./manage.py test backend/tests/
