--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ before_install:
   - docker-compose run --rm backend ./manage.py test backend/tests/
 
 install:
-  - pip install backend/requirements.txt
+  - pip install -r backend/requirements.txt
