--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ services:
 
 before_install:
   # - docker-compose build
-  - docker-compose run --rm backend ./manage.py test backend/tests/
 
 install:
+
+script:
+  - docker-compose run --rm backend ./manage.py test backend/tests/
