--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,7 @@ services:
   - docker
 
 before_install:
-  # - docker-compose build
-
-install:
+  - docker-compose build
 
 script:
   - docker-compose run --rm backend ./manage.py test backend/tests/
