--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ language: python
 
 services:
   - docker
+  - postgresql
+
+before_install:
+  - psql -c 'create database travis_ci_test;' -U postgres
 
 install:
   - docker-compose build
