--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ services:
   - postgresql
 
 before_install:
-  - psql -c 'create database travis_ci_test;' -U postgres
+  - "psql -c 'create database myapp_test;' -U postgres"
+  - ./manage.py migrate /backend
 
 install:
   - docker-compose build
@@ -16,9 +17,6 @@ postgres:
   adapter: postgresql
   database: myapp_test
   username: postgres
-before_script:
-  - "psql -c 'create database myapp_test;' -U postgres"
-  - "rake db:migrate"
 
 script:
   - docker-compose run --rm backend ./manage.py test backend/tests/
