--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,14 @@ services:
 
 matrix:
   include:
-    - language: python
-      python: 3.6
-      script:
-        - docker-compose run --rm backend ./manage.py test backend/tests/
+    # - language: python
+    #   python: 3.6
+    #   script:
+    #     - docker-compose run --rm backend ./manage.py test backend/tests/
 
     - language: node_js
       node_js: "10.15"
+      before_script:
+        - cd frontend
       script:
         - docker-compose run --rm frontend npm test -- --watch
