--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ matrix:
     - language: node_js
       node_js: "10.15"
       script:
-        - docker-compose run --rm frontend npm test -- --watch
+        - docker-compose run --rm frontend yarn test -- --watch
