--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,8 @@ matrix:
 
     - language: node_js
       node_js: "10.15"
+      before_script:
+        - cd frontend/src/tests
+        - npm install
       script:
-        - docker-compose run --rm frontend yarn test -- --watch
+        - docker-compose run --rm frontend npm test -- --watch
