--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ matrix:
         - cd frontend/src/tests
         - npm install
       script:
-        - docker-compose run --rm frontend npm test
+        - docker-compose run --rm frontend npm test -- --forceExit
