--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,6 @@ matrix:
       node_js: 10.15
       before_script:
         - npm install
+        - docker-compose up -d --build
       script:
         - docker-compose run --rm frontend npm test -- --watch
