--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,21 @@
 #Travis Configs File
 
-language:
-  - python
-  - node_js
-
 services:
   - docker
 
 matrix:
   include:
-    # - language: python
-    #   python: 3.6
-    #   script:
-    #     - docker-compose run --rm backend ./manage.py test backend/tests/
+    - language: python
+      python: 3.6
+      before_script:
+        - docker-compose up -d --build
+      provider: script
+      script:
+        - docker-compose run --rm backend ./manage.py test backend/tests/
 
     - language: node_js
       node_js: 10.15
       before_script:
-        - npm install
-        - yarn install
         - docker-compose up -d --build
       provider: script
       script:
