--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,6 @@ language: node_js
 
 install:
   - docker-compose up -d --build
-  - npm install frontend/
 
 matrix:
   include:
@@ -20,5 +19,7 @@ matrix:
     - language: node_js
       node_js: 10.15
       provider: script
+      before_script:
+        - npm install frontend/
       script:
-        - docker-compose run --rm frontend npm test src/tests/
+        - docker-compose run --rm frontend npm test src/tests/ -- --coverage
