--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ matrix:
       node_js: 10.15
       provider: script
       before_script:
+        - docker-compose up -d --build
         - npm install frontend/
       script:
         - docker-compose run --rm frontend npm test src/tests/ -- --coverage
