--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,4 +1,4 @@
-#This script is for developement use only. Please do not deploy it in production in its current stage. 
+#This script is for developement use only. Please do not deploy it in production in its current stage.
 
 version: "3"
 
@@ -8,7 +8,9 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
   backend:
-    build: ./backend
+    build:
+      context: ./backend
+      dockerfile: ./backend/Dockerfile.dev
     volumes:
       - ./backend/:/backend # maps host directory to internal container directory
     working_dir: /backend/
@@ -16,19 +18,22 @@ services:
     depends_on:
       - db
   frontend:
-    volumes :
-      - ./frontend:/home/node  
-    build: ./frontend
+    volumes:
+      - ./frontend:/home/node
+    build:
+      context: ./frontend
+      dockerfile: ./frontend/Dockerfile.dev
     command: sh entrypoint.sh
     working_dir: /home/node
 
-
   nginx:
-    build: ./nginx
+    build:
+      context: ./nginx
+      dockerfile: ./nginx/Dockerfile.dev
     ports:
       - 80:8080
     volumes:
-      - ./nginx/nginx-proxy.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/nginx-proxy.dev.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - backend
 
