--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ matrix:
     - language: python
       python: 3.6
       provider: script
+      before_script:
+        - pip install -r requirements.txt
       script:
         - docker-compose run --rm backend ./manage.py test tests
 
