--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ matrix:
       python: 3.6
       provider: script
       before_script:
+        - cd backend/
         - pip install -r requirements.txt
       script:
         - docker-compose run --rm backend ./manage.py test tests
