--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,27 +1,29 @@
-certifi==2018.1.18
+certifi==2019.3.9
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 django==2.1.7
-django-cors-headers==2.4.0
-django-rest-swagger==2.1.2
+django-cors-headers==3.0.0
+django-rest-swagger==2.2.0
 django-templated-mail==1.1.1
-djangorestframework==3.9.1
+djangorestframework==3.9.3
 djangorestframework-jwt==1.11.0
-djoser==1.3.3
-idna==2.6
+idna==2.8
 itypes==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.0
 openapi-codec==1.3.2
-PyJWT==1.5.3
-pytz==2018.3
+PyJWT==1.7.1
+pytz==2019.1
 requests==2.21.0
-simplejson==3.13.2
-sqlparse==0.2.4
+simplejson==3.16.0
+sqlparse==0.3.0
 uritemplate==3.0.0
-urllib3==1.24.3
-psycopg2-binary==2.7.6
+psycopg2-binary==2.8.2
+django-debug-toolbar==1.11
 
-# from requirements/local.txt
-django-debug-toolbar==1.9.1
+# latest compatible version of djoser (VULNERABILITY ISSUE - MEDIUM SEVERITY)
+djoser==1.3.3
+
+# latest compatible version of urllib3
+urllib3==1.24.3
