Updated proxy settings + Removed backend url in LoginRedux + Updated urls.py file

--- a/nginx/nginx-proxy.conf
+++ b/nginx/nginx-proxy.conf
@@ -21,6 +21,10 @@ server {
         proxy_pass http://api;
     }
 
+        location /api/auth/jwt/create/ {
+        proxy_pass http://api;
+    }
+
     # ignore cache frontend
     location ~* (service-worker\.js)$ {    
         add_header 'Cache-Control' 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';    
