Added /api in front of the database_check api url

--- a/nginx/nginx-proxy.conf
+++ b/nginx/nginx-proxy.conf
@@ -17,7 +17,7 @@ server {
         proxy_pass http://api$request_uri;
     }
 
-    location /database_check/ {
+    location /api/database_check/ {
         proxy_pass http://api;
     }
 
