--- a/nginx/nginx-proxy.conf
+++ b/nginx/nginx-proxy.conf
@@ -5,7 +5,7 @@ upstream api {
 
 server {
     listen 8080;
-    location /api/ {
+    location /api {
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Host $server_name;
@@ -15,14 +15,6 @@ server {
         proxy_http_version 1.1;
         proxy_buffering off;
         proxy_pass http://api$request_uri;
-    }
-
-    location /api/database_check/ {
-        proxy_pass http://api;
-    }
-
-        location /api/auth/jwt/create/ {
-        proxy_pass http://api;
     }
 
     # ignore cache frontend
