--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 django==2.1.7
+djangorestframework-simplejwt==4.3.0
 django-cors-headers==3.0.0
 django-rest-swagger==2.2.0
 django-templated-mail==1.1.1
@@ -21,9 +22,7 @@ sqlparse==0.3.0
 uritemplate==3.0.0
 psycopg2-binary==2.8.2
 django-debug-toolbar==1.11
-
-# latest compatible version of djoser (VULNERABILITY ISSUE - MEDIUM SEVERITY)
-djoser==1.3.3
+djoser==1.5.1
 
 # latest compatible version of urllib3
 urllib3==1.24.3
