--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-helmet": "^5.2.0",
     "react-localization": "^1.0.13",
     "react-medium-image-zoom": "^3.0.15",
+    "react-modal": "^3.8.1",
     "react-redux": "^6.0.1",
     "react-responsive-select": "4.6.3",
     "react-router": "^4.3.1",
