travis configs updates

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,17 +22,14 @@ matrix:
     #APIs Tests
     - language: node_js
       node_js: 10.15
-      install:
-        - npm install newman
       provider: script
       before_script:
         - docker-compose up -d --build
         - npm install frontend/
-        - node --version
-        - npm --version
+        - npm install newman
         - node_modules/.bin/newman --version
       script:
-        - node_modules/.bin/newman run backend/tests/ThunderCAT.postman_collection.json -e backend/tests/ThunderCAT.postman_environment.json
+        - node_modules/.bin/newman run backend/tests/ThunderCAT.postman_collection.json
 
     #Frontend Tests
     - language: node_js
