Updated travis configs

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ matrix:
       install:
         - npm install newman
       before_script:
+        - npm install frontend/
         - node_modules/.bin/newman --version
       script:
         - node_modules/.bin/newman run backend/tests/ThunderCAT.postman_collection.json -e backend/tests/ThunderCAT.postman_environment.json
