Updated travis configs

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,10 +26,11 @@ matrix:
       install:
         - npm install newman
       before_script:
+        - docker-compose up -d --build
         - npm install frontend/
         - node_modules/.bin/newman --version
       script:
-        - node_modules/.bin/newman run backend/tests/ThunderCAT.postman_collection.json -e backend/tests/ThunderCAT.postman_environment.json
+        - newman run backend/tests/ThunderCAT.postman_collection.json -e backend/tests/ThunderCAT.postman_environment.json
 
     #Frontend Tests
     - language: node_js
