--- a/nginx/nginx-server.conf
+++ b/nginx/nginx-server.conf
@@ -6,6 +6,7 @@ upstream api {
 server {
   listen 443;
   
+  # serve the built frontend via nginx
   location / {
     root /usr/share/nginx/html;
     index index.html;
@@ -14,13 +15,14 @@ server {
   
   include /etc/nginx/extra-conf.d/*.conf;
 
-    # ignore cache frontend
-    location ~* (service-worker\.js)$ {    
-        add_header 'Cache-Control' 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';    
-        expires off;    
-        proxy_no_cache 1;
-    }
+  # ignore cache frontend
+  location ~* (service-worker\.js)$ {
+      add_header 'Cache-Control' 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+      expires off;
+      proxy_no_cache 1;
+  }
 
+  # proxy for the backend
   location /api {
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
