Fixed some path in the Dockerfiles

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-ENVIRONMENT=
-DATABASE_NAME=
-DATABASE_USER=
-DATABASE_PASSWORD=
-DATABASE_HOST=
-DATABASE_PORT=
+ENVIRONMENT=dev
+DATABASE_NAME=emib-db
+DATABASE_USER=emib
+DATABASE_PASSWORD=Password1
+DATABASE_HOST=10.1.1.4
+DATABASE_PORT=5432
