Documented the .env file

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-ENVIRONMENT=dev
-DATABASE_NAME=emib-db
-DATABASE_USER=emib
-DATABASE_PASSWORD=Password1
-DATABASE_HOST=10.1.1.4
-DATABASE_PORT=5432
+# Please fill in your own configuration otherwise it will not work.
+
+ENVIRONMENT=dev #Configure Django to look for the environment variables
+DATABASE_NAME=
+DATABASE_USER=
+DATABASE_PASSWORD=
+DATABASE_HOST=10.x.x.x #IP address of the database server
+DATABASE_PORT=5432 #Default is 5432
