--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
     "react-localization": "^1.0.13",
+    "react-markdown": "^4.1.0",
     "react-medium-image-zoom": "^3.0.15",
     "react-modal": "^3.8.1",
     "react-redux": "^6.0.1",
