Fix spelling of app title

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "CAT",
-  "name": "Compotency Assessment Tool",
+  "name": "Competency Assessment Tool",
   "icons": [
     {
       "src": "favicon.png",
