--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.0.1",
+    "react-super-select": "^1.0.20",
     "react-test-renderer": "^16.7.0",
     "react-textarea-autosize": "^7.1.0",
     "redux": "^4.0.1",
