--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,12 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.18",
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "classnames": "^2.2.6",
     "connected-react-router": "^6.3.1",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "history": "^4.7.2",
+    "lodash": "^4.17.11",
     "newman": "^4.5.0",
     "prop-types": "^15.5.8",
     "react": "^16.7.0",
@@ -22,7 +24,6 @@
     "react-medium-image-zoom": "^3.0.15",
     "react-modal": "^3.8.1",
     "react-redux": "^6.0.1",
-    "react-responsive-select": "4.6.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.0.1",
