--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^16.7.0",
     "react-app-polyfill": "^0.2.0",
     "react-bootstrap": "^1.0.0-beta.8",
+    "react-countdown-now": "^2.1.1",
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
     "react-localization": "^1.0.13",
