--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,8 +32,7 @@
     "react-textarea-autosize": "^7.1.0",
     "redux": "^4.0.1",
     "redux-mock-store": "1.5.3",
-    "redux-thunk": "^2.3.0",
-    "snyk": "^1.193.3"
+    "redux-thunk": "^2.3.0"
   },
   "resolutions": {
     "mem": ">=4.3.0",
@@ -45,9 +44,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "snyk-protect": "snyk protect",
-    "prepublish": "npm run snyk-protect"
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
     "eslint": "5.16.0",
@@ -67,6 +64,5 @@
     "not dead",
     "not ie <= 8",
     "not op_mini all"
-  ],
-  "snyk": true
+  ]
 }
